<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherLogin"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/backArrow"
                android:background="@null"
                android:backgroundTint="#FFFFFF"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/txtCreateClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createClassTitle"
                style="@style/createClassTitle"
                />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextBoxStyle"



            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"


                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextBoxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBranch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtBranch"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextBoxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtSemester"
                android:inputType="number"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextBoxStyle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPortNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtPortNumber"
                android:inputType="number"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:gravity="center"

        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txtCancel"
            style="@style/ButtonStyle"
            android:textColor="@color/text_primary_light"
            android:backgroundTint="@color/secondary_bg_light"
            android:layout_weight="1"
            app:cornerRadius="12dp"
            android:layout_marginEnd="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txtCreate"
            style="@style/ButtonStyle"
            android:textColor="@color/button_text_primary_light"
            android:backgroundTint="@color/primary_bg_light"
            android:layout_weight="1"
            app:cornerRadius="12dp"
            />


    </LinearLayout>
</LinearLayout>